force-app/main/default/objects/vlocity_cmt__ObjectRuleAssignment__c/fields/vlocity_cmt__EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__EffectiveEndDate__c</fullName>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>