force-app/main/default/objects/vlocity_cmt__ObjectRuleAssignment__c/fields/vlocity_cmt__Object__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>